fix the .dbox class so users can edit the donation number.
(currently the "Donate to Tor" text covers the box with the number 5 in
it, so they can't click on it to change it.)

--- a/css/layout.css
+++ b/css/layout.css
@@ -980,6 +980,7 @@ small {
 	padding: 1.4em 0.7em;
 	width: 163px;
 	margin: 0px 0px 0px 10px;
+	z-index:-10;
 }
 
 	.dbox p {
